# protein_function_prediction

./: .gitignore  pyproject.toml
bd_project/: BP.ipynb  CC.ipynb  CC0.ipynb  CC1.ipynb  CC2.ipynb  README.txt  dataset_creation.ipynb  dataset_creation_BP.ipynb  datasets_creation-caos-Copy1.ipynb  datasets_creation-caos.ipynb  datasets_creation.ipynb  datasets_creation_BP(MODIFIED).ipynb  datasets_creation_BP.ipynb  datasets_creation_CC+MF+BP.ipynb  datasets_creation_CC+MF.ipynb  datasets_creation_withCC.ipynb  load_data.py  mlb_bp.pkl  mlb_cc.pkl  mlb_mf.pkl  model_bp.pth  model_mf.pth  output.ipynb  submission.tsv  submission.txt
bd_project/.ipynb_checkpoints/: datasets_creation-caos-Copy1-checkpoint.ipynb  datasets_creation-caos-checkpoint.ipynb
bd_project/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
bd_project/catboost_info/learn/: events.out.tfevents
