[tool.poetry]
name = "bd_project"
version = "0.1.0"
description = ""
authors = ["Elia Tiso", "Valeria Ferlin", "Mattia Piazza"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
cafaeval = "^1.2.1"
biopython = "^1.84"
h5py = "^3.12.1"
torch = "^2.6.0"
xgboost = "^2.1.4"
skorch = "^1.1.0"
torchsummary = "^1.5.1"
rich = "^13.9.4"


[tool.poetry.group.dev.dependencies]
rich = "^13.9.4"
ruff = "^0.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
